<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DemoActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/demo_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/icon_left"
        android:drawableLeft="@drawable/action_search"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/icon_left_padding"
        android:drawableLeft="@drawable/action_search"
        app:iconPadding="10dp"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/icon_right"
        android:drawableRight="@drawable/action_search"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton04"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/icon_right_padding"
        android:drawableRight="@drawable/action_search"
        app:iconPadding="10dp"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton05"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/icon_both"
        android:drawableLeft="@drawable/action_search"
        android:drawableRight="@drawable/action_search"
        />

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/IconButton06"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/icon_both_padding"
        android:drawableLeft="@drawable/action_search"
        android:drawableRight="@drawable/action_search"
        app:iconPadding="10dp"
        />
</LinearLayout>